--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.form-submit-button{
+  background:#0066A2;
+  color:white;
+  border-style:outset;
+  border-color:#0066A2;
+  height:50px;
+  width:100px;
+
+}
